--- a/Assignment.html
+++ b/Assignment.html
@@ -27,28 +27,38 @@
     <div class="info">
         <div class="container mt-4 rounded shadow p-3 mb-5 bg-body-tertiary rounded" style="background-color: white;">
             <div class="row">
-                <div class="col-2 text-left text-md-center">
+                <div class="col-md-2 text-left text-md-center">
                     <img class="rounded-circle img-fluid mt-4" style="width: 150px; height: 150px;" src="images/kaget.jpg" alt="foto profile">
                 </div>
-                <div class="col-5 mt-4">
+                <div class="col-md-5 mt-4">
                     <h1 id="nama">Nurakhmad Sustantyo</h1>
                     <p id="role" style="color: grey;">Front End Designer</p>
                     <button type="button" class="btn btn-primary">Kontak</button>
                     <button type="button" class="btn btn-outline-success">Resume</button>
                 </div>
-                <div class="col-2 mt-3">
-                    <p class="fw-bold">Availability</p>
-                    <p class="fw-bold">Usia</p>
-                    <p class="fw-bold">Lokasi</p>
-                    <p class="fw-bold">Pengalaman</p>
-                    <p class="fw-bold">Email</p>
-                </div>
-                <div class="col-3 mt-3">
-                    <p style="color: grey;" id="availability">Full Time</p>
-                    <p style="color: grey;" id="umur">22</p>
-                    <p style="color: grey;" id="lokasi">Bojonegoro</p>
-                    <p style="color: grey;" id="year-experience">2</p>
-                    <p style="color: grey;" id="email">nsustantyo12@gmail.com</p>
+                <div class="col-md-5 mt-3">
+                    <table class="table-primary table-borderless" style="border-collapse: separate; border-spacing: 5px;">
+                        <tr>
+                            <th style="padding-right: 40px;">Availability</th>
+                            <td id="availability">Full Time</td>
+                        </tr>
+                        <tr>
+                            <th style="padding-right: 40px;">Usia</th>
+                            <td id="umur">22</td>
+                        </tr>
+                        <tr>
+                            <th style="padding-right: 40px;">Lokasi</th>
+                            <td id="lokasi">Bojonegoro</td>
+                        </tr>
+                        <tr>
+                        <th style="padding-right: 40px;">Pengalaman</th>
+                            <td id="year-experience">2</td>
+                        </tr>
+                        <tr>
+                            <th style="padding-right: 40px;">Email</th>
+                            <td class="text-break" id="email">nsustantyo12@gmail.com</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
